Fix safari content overflow bug

--- a/draft-packages/guidance-block/KaizenDraft/GuidanceBlock/GuidanceBlock.scss
+++ b/draft-packages/guidance-block/KaizenDraft/GuidanceBlock/GuidanceBlock.scss
@@ -66,7 +66,7 @@ $ca-banner-collapse-height-delayed: margin-top $kz-var-animation-duration-fast
 }
 
 .descriptionContainer {
-  flex: 0 1 auto;
+  flex: 1;
   margin: $kz-var-spacing-sm 0;
   text-align: center;
   max-width: 780px;
